// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule A
 * @flow
 */

import type T from "T";

export default class {
  p: T;

  constructor() {
    this.p = 0;
  }
}

=====================================output=====================================
/**
 * @providesModule A
 * @flow
 */

import type T from "T";

export default class {
  p: T;

  constructor() {
    this.p = 0;
  }
}

================================================================================
`;

exports[`B.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 */

import A from "A"

class B extends A {
  p: string; // OK, string ~> any
}

=====================================output=====================================
/**
 * @flow
 */

import A from "A";

class B extends A {
  p: string; // OK, string ~> any
}

================================================================================
`;

exports[`T.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule T
 */

=====================================output=====================================
/**
 * @providesModule T
 */

================================================================================
`;
